--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-hello worked
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head><title>Radhesh Gupta - Home Page</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="description" content="" /><meta name="keywords" content="Radhesh Gupta, CIMS - NYU, Computer Science Department, MS student" /><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /><link rel="stylesheet" href="css/site.css" type="text/css" />
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-19536580-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+</head>
+
+<meta name="description" content="Radhesh Gupta 's Page, Contains details about Radhesh's research work, course work (at New Your University, Courant Institute of Mathematics and National Institue of Technology Karnataka, NITK Surathkal), academic interestes, professional experience, blogs, activities, sports and other participations."/>
+<meta name="keywords" content="Radhesh, Gupta, Radhesh NYU, Radhesh NITK, Radhesh Courant, Radhesh Health Care Magic, Radhesh Aditi, Radhesh Sparsh"/>
+<link rel="shortcut icon" href="images/radheshFavicon.jpg">
+
+<body>
+<div id="container">
+<div id="banner">
+<div class="imgteaser" style="text-align: center">
+<img width="1024" height="175" src="images/nitk.jpg" alt="Shore view at the NITK Surathkal Beach"/>
+<span class="desc" style="color:#381704; font-size:10px; letter-spacing:0.1em;">
+		Shore view at my undergrad college, NITK Surathkal. An utmost beautiful campus and perhaps the only one in the world to boast of a beach of its own!
+</span>
+</div>
+
+<h1><a href="index.html">Radhesh Gupta</a></h1>
+</div>
+<ul id="navlist"><li id="current"><a id="current" href="index.html">About</a></li><li><a href="profile.html">Profile</a></li><li><a href="courses.html">Courses</a></li><li><a href="acadProjects.html">Academic Projects</a></li><li><a href="experience.html">Professional Experience</a></li><li><a href="passions.html">Passions</a></li><li><a href="misc.html">Misc</a></li></ul><!-- End Top Menu --><div id="sidebar-a"><div id='frame_1'>
+	<img alt="" height="227" src="images/radhesh.jpg" width="185" /></h5>
+<h5>
+	<p>
+	Radhesh Gupta
+	</p>
+</h5>
+<p>
+
+	MS - Computer Science <br />
+	Courant Institute of Mathematical Sciences (CIMS) <br />
+	New York University (NYU) <br />
+	New York, NY 10012</p>
+<p>
+	Email: <span> radheshg[at]nyu[dot]edu <br />
+
+	Phone: +1-718-679-8922 <br />
+	</p>
+ </div></div><div id="content"><div id='frame_0'><p>
+	I am a Masters student in the department of <a href="http://www.cs.nyu.edu" target="_blank">Computer Science</a> at <a href="http://www.cims.nyu.edu" target="_blank">Courant Institute of Mathematical Sciences(CIMS)</a>, <a href="http://www.nyu.edu" target="_blank">NYU</a></p>
+<p>
+
+	My interests include Advanced Systems and Algorithms. I am currently working as a Teaching Assistant for courses in <a href="http://cs.nyu.edu/courses/fall10/V22.0310-001/index.html">Basic Algorithms</a> and <a href="http://cs.nyu.edu/~gottlieb/courses/introCS/">Introduction to Computer Science - JAVA</a>, at NYU.<br><br>
+	I have had chance to prefessionaly work in varied projects at Aditi Technologies and HealthcareMagic.com [extensively and independently]. I always cherish the exposure and learning from my short(about 2 years) yet very significant professional tenure.<br>
+	For more details of my professional work - [<a href="experience.html">Click Here</a>]
+
+<p>
+	I received my B.Tech. (Bachelor of Technology) degree in Electrical and Electronics Engineering from National Institute of Technology Karnataka, Surathkal (<a href="http://www.nitk.ac.in">NITK</a>), India (formerly called KREC) in 2008.</p>
+	
+<p>
+	Apart from Computer Science, I love:<br>
+	mathematics, physics, social entrepreneurship, <a href="new_york/new_york.html">travel</a>, adventure sports, puzzles, badminton, stocks ..
+</p>
+
+
+</div><br/><br/>	</div><br/><div id="footer">&nbsp; Radhesh Gupta&nbsp;|&nbsp;Last modified on Nov 05, 2010</div></div><br/>
+
+</body></html>
