--- a/index.html
+++ b/index.html
@@ -1,65 +1,72 @@
-<!doctype html>
-<html>
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>spf13</title>
-	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta name="robots" content="all" />
-	<meta name="MSSmartTagsPreventParsing" content="true" />
-	<meta http-equiv="imagetoolbar" content="false" />	
-	<style>
-		* { padding: 0; margin: 0; }
-		p { color: #fff; font-family: Helvetica; font-size: 16px; line-height: 24px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; text-shadow:1px 1px 1px #000; }
-		a { color: #B1CFD8; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(255,255,255,0.3); }
-		a:hover { color: #6079AA; border-bottom: 1px solid rgba(255,255,255,1); }
-		#monogram { width: 50px; padding: 25px 0 0 0; margin: 0 auto 0 50px; }
-		#about { width: 440px; margin: 10px auto 0px 50px !important; }
-	</style>
-    <script type="text/javascript">
-      var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-12027916-1']); _gaq.push(['_trackPageview']); 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-</head>	
-    
-<body>
-
-<div id="monogram">
-	<img src="monogram.png" />
-</div>
-
-<div id="about">
-    <p>I am Steve Francia, or better known online as <a href="http://spf13.com">spf13</a>.<br> My passion has always been the intersection of user experience and technology. I have the opportunity to do both as the Chief Developer Advocate for <a href="http://mongodb.com">MongoDB</a> where I am responsible for the user experience of one of the world's fastest growing database. I lead the drivers, evangelism, web and tools teams. Previously I was VP of Engineering at <a href="http://opensky.com">OpenSky</a>, CIOO at <a href="http://portero.com">Portero</a>, VP of Development at <a href="http://takkle.com">Takkle</a> and Founder &amp; CTO of Supernerd.
-    </p>
-<p>
-While always a pragmatist, I'm a believer in open source. Over the last 15 years I have contributed to <a href="http://github.com/spf13/">dozens of projects</a> in many different languages and started a <a href="http://hugo.spf13.com">few</a> of <a href="http://github.com/spf13/cobra">my</a> own. I prefer to code in Vim and maintain a <a href="http://vim.spf13.com">popular Vim distribution</a>.
-</p>
-
-<p>
-I often <a href="http://spf13.com/presentations">speak at conferences</a> around the world on a variety of topics including user experience, scalability, e-commerce, cloud computing, big data, development, and MongoDB. </p>
-
-<p> I <a href="http://spf13.com">blog</a> about my experiences, technology and life. I have contributed articles to magazines, papers and journals. I authored <a href="http://shop.oreilly.com/product/0636920022381.do">a book published by O'Reilly</a>.
-</p>
-<p>
-My work has been featured by the New York Times, the Guardian, Mashable, ReadWriteWeb and more.
-</p>
-
-<p>
-I am a <a href="http://byu.edu">BYU</a> alumnus, where I also created and taught a course on dynamic web development.
-</p>
-
-</div>
-
-<!--include jquery & backstretch-->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-<script type="text/javascript" src="jquery.backstretch.min.js"></script>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head><title>Radhesh Gupta - Home Page</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="description" content="" /><meta name="keywords" content="Radhesh Gupta, CIMS - NYU, Computer Science Department, MS student" /><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /><link rel="stylesheet" href="css/site.css" type="text/css" />
 <script type="text/javascript">
-	$.backstretch("spf_bg.jpg", {speed: 150});
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-19536580-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 
-</body>	
-</html>
+</head>
+
+<meta name="description" content="Radhesh Gupta 's Page, Contains details about Radhesh's research work, course work (at New Your University, Courant Institute of Mathematics and National Institue of Technology Karnataka, NITK Surathkal), academic interestes, professional experience, blogs, activities, sports and other participations."/>
+<meta name="keywords" content="Radhesh, Gupta, Radhesh NYU, Radhesh NITK, Radhesh Courant, Radhesh Health Care Magic, Radhesh Aditi, Radhesh Sparsh"/>
+<link rel="shortcut icon" href="images/radheshFavicon.jpg">
+
+<body>
+<div id="container">
+<div id="banner">
+<div class="imgteaser" style="text-align: center">
+<img width="1024" height="175" src="images/nitk.jpg" alt="Shore view at the NITK Surathkal Beach"/>
+<span class="desc" style="color:#381704; font-size:10px; letter-spacing:0.1em;">
+		Shore view at my undergrad college, NITK Surathkal. An utmost beautiful campus and perhaps the only one in the world to boast of a beach of its own!
+</span>
+</div>
+
+<h1><a href="index.html">Radhesh Gupta</a></h1>
+</div>
+<ul id="navlist"><li id="current"><a id="current" href="index.html">About</a></li><li><a href="profile.html">Profile</a></li><li><a href="courses.html">Courses</a></li><li><a href="acadProjects.html">Academic Projects</a></li><li><a href="experience.html">Professional Experience</a></li><li><a href="passions.html">Passions</a></li><li><a href="misc.html">Misc</a></li></ul><!-- End Top Menu --><div id="sidebar-a"><div id='frame_1'>
+	<img alt="" height="227" src="images/radhesh.jpg" width="185" /></h5>
+<h5>
+	<p>
+	Radhesh Gupta
+	</p>
+</h5>
+<p>
+
+	MS - Computer Science <br />
+	Courant Institute of Mathematical Sciences (CIMS) <br />
+	New York University (NYU) <br />
+	New York, NY 10012</p>
+<p>
+	Email: <span> radheshg[at]nyu[dot]edu <br />
+
+	Phone: +1-718-679-8922 <br />
+	</p>
+ </div></div><div id="content"><div id='frame_0'><p>
+	I am a Masters student in the department of <a href="http://www.cs.nyu.edu" target="_blank">Computer Science</a> at <a href="http://www.cims.nyu.edu" target="_blank">Courant Institute of Mathematical Sciences(CIMS)</a>, <a href="http://www.nyu.edu" target="_blank">NYU</a></p>
+<p>
+
+	My interests include Advanced Systems and Algorithms. I am currently working as a Teaching Assistant for courses in <a href="http://cs.nyu.edu/courses/fall10/V22.0310-001/index.html">Basic Algorithms</a> and <a href="http://cs.nyu.edu/~gottlieb/courses/introCS/">Introduction to Computer Science - JAVA</a>, at NYU.<br><br>
+	I have had chance to prefessionaly work in varied projects at Aditi Technologies and HealthcareMagic.com [extensively and independently]. I always cherish the exposure and learning from my short(about 2 years) yet very significant professional tenure.<br>
+	For more details of my professional work - [<a href="experience.html">Click Here</a>]
+
+<p>
+	I received my B.Tech. (Bachelor of Technology) degree in Electrical and Electronics Engineering from National Institute of Technology Karnataka, Surathkal (<a href="http://www.nitk.ac.in">NITK</a>), India (formerly called KREC) in 2008.</p>
+	
+<p>
+	Apart from Computer Science, I love:<br>
+	mathematics, physics, social entrepreneurship, <a href="new_york/new_york.html">travel</a>, adventure sports, puzzles, badminton, stocks ..
+</p>
+
+
+</div><br/><br/>	</div><br/><div id="footer">&nbsp; Radhesh Gupta&nbsp;|&nbsp;Last modified on Nov 05, 2010</div></div><br/>
+
+</body></html>
